--- a/SpatialDecision/spatial_decision_dockwidget_base.ui
+++ b/SpatialDecision/spatial_decision_dockwidget_base.ui
@@ -24,7 +24,7 @@
        <attribute name="title">
         <string>data</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,5,0">
+       <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0">
         <item>
          <layout class="QFormLayout" name="formLayout">
           <item row="0" column="0">
@@ -45,20 +45,26 @@
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,5">
-          <item row="0" column="0">
-           <widget class="QLabel" name="selectLayerLabel">
-            <property name="text">
-             <string>Select layer:</string>
+          <item row="2" column="1">
+           <widget class="QPushButton" name="ambulanceButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="selectLayerCombo"/>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="selectAttributeLabel">
             <property name="text">
-             <string>Select attribute:</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>icons/ambulance.png</normaloff>icons/ambulance.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>64</width>
+              <height>64</height>
+             </size>
             </property>
            </widget>
           </item>
@@ -77,8 +83,8 @@
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="resources.qrc">
-              <normaloff>:/plugins/SpatialDecision/icons/medic_box.png</normaloff>:/plugins/SpatialDecision/icons/medic_box.png</iconset>
+             <iconset>
+              <normaloff>icons/medic_box.png</normaloff>icons/medic_box.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -88,26 +94,20 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
-           <widget class="QPushButton" name="ambulanceButton">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="selectLayerCombo"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="selectAttributeLabel">
             <property name="text">
-             <string/>
+             <string>Select attribute:</string>
             </property>
-            <property name="icon">
-             <iconset resource="resources.qrc">
-              <normaloff>:/plugins/SpatialDecision/icons/ambulance.png</normaloff>:/plugins/SpatialDecision/icons/ambulance.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>64</width>
-              <height>64</height>
-             </size>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="selectLayerLabel">
+            <property name="text">
+             <string>Select layer:</string>
             </property>
            </widget>
           </item>
@@ -185,35 +185,35 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="0">
+        <item row="6" column="0">
          <widget class="QPushButton" name="selectBufferButton">
           <property name="text">
            <string>Select in Buffer</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="6" column="1">
          <widget class="QPushButton" name="selectRangeButton">
           <property name="text">
            <string>Select in Range</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="0">
+        <item row="8" column="0">
          <widget class="QPushButton" name="expressionSelectButton">
           <property name="text">
            <string>Select</string>
           </property>
          </widget>
         </item>
-        <item row="6" column="0" colspan="2">
+        <item row="7" column="0" colspan="2">
          <widget class="QLineEdit" name="expressionEdit">
           <property name="text">
            <string>id &lt; 3</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="8" column="1">
          <widget class="QPushButton" name="expressionFilterButton">
           <property name="text">
            <string>Filter</string>
@@ -224,6 +224,13 @@
          <widget class="QPushButton" name="clearRouteButton">
           <property name="text">
            <string>Clear Routes</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QPushButton" name="makeIntersectionButton">
+          <property name="text">
+           <string>Intersection</string>
           </property>
          </widget>
         </item>
@@ -290,8 +297,6 @@
    </layout>
   </widget>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
